first and final commit

--- a/ScrollView/Base.lproj/Main.storyboard
+++ b/ScrollView/Base.lproj/Main.storyboard
@@ -1,14 +1,19 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11134" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11762" systemVersion="16C67" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11106"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="ScrollView" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -16,11 +21,60 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Sky" translatesAutoresizingMaskIntoConstraints="NO" id="mzR-dE-zzN">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                            </imageView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Sun" translatesAutoresizingMaskIntoConstraints="NO" id="Bww-BW-1zt">
+                                <rect key="frame" x="275" y="37" width="84" height="70"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="84" id="9ww-7Z-RRq"/>
+                                    <constraint firstAttribute="height" constant="70" id="j7S-Kx-old"/>
+                                </constraints>
+                            </imageView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Mountains" translatesAutoresizingMaskIntoConstraints="NO" id="afq-Q8-juE">
+                                <rect key="frame" x="0.0" y="539" width="375" height="128"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="375" id="M47-gh-VY9"/>
+                                    <constraint firstAttribute="height" constant="128" id="rw5-Qu-Rrf"/>
+                                </constraints>
+                            </imageView>
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" pagingEnabled="YES" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" translatesAutoresizingMaskIntoConstraints="NO" id="SLa-2Q-pfO">
+                                <rect key="frame" x="77.5" y="0.0" width="220" height="667"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="220" id="pAI-dB-RIZ"/>
+                                </constraints>
+                            </scrollView>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="mzR-dE-zzN" secondAttribute="bottom" id="2gw-Yx-Xd0"/>
+                            <constraint firstAttribute="trailing" secondItem="mzR-dE-zzN" secondAttribute="trailing" id="8at-QS-Yzg"/>
+                            <constraint firstItem="Bww-BW-1zt" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="17" id="Aaj-rh-8nq"/>
+                            <constraint firstItem="Bww-BW-1zt" firstAttribute="trailing" secondItem="8bC-Xf-vdC" secondAttribute="trailingMargin" id="GCa-bW-dle"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="SLa-2Q-pfO" secondAttribute="bottom" id="VdY-M7-v51"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="afq-Q8-juE" secondAttribute="bottom" id="Z9J-Mr-2M4"/>
+                            <constraint firstItem="SLa-2Q-pfO" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="aMt-hM-Mtd"/>
+                            <constraint firstAttribute="trailing" secondItem="afq-Q8-juE" secondAttribute="trailing" id="aNo-BO-3AY"/>
+                            <constraint firstItem="SLa-2Q-pfO" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="acU-cG-4s8"/>
+                            <constraint firstItem="mzR-dE-zzN" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="u5g-Be-xOH"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="SLa-2Q-pfO" secondAttribute="bottom" id="udC-Ls-Tsi"/>
+                            <constraint firstItem="afq-Q8-juE" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="v9M-EL-B8n"/>
+                            <constraint firstItem="mzR-dE-zzN" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="yJ9-vQ-Ctx"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="ScrollViewObj" destination="SLa-2Q-pfO" id="fLs-vY-o7O"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="133.59999999999999" y="137.18140929535232"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="Mountains" width="375" height="100"/>
+        <image name="Sky" width="375" height="667"/>
+        <image name="Sun" width="53" height="53"/>
+    </resources>
 </document>
